<resources>
    <string name="app_name">CPEN321-M1</string>
    <string name="maps_button_caption">My Favourite City</string>
    <string name="phone_button_caption">Phone Details</string>
    <string name="login_button_caption">Login + Server Info</string>
    <string name="surprise_button_caption">Surprise</string>
    <string name="location_button_caption">Enable Location Permissions</string>

    <string name="current_city_caption">Current City: </string>
    <string name="phone_manufact_caption">Phone Manufacturer: </string>
    <string name="phone_model_caption">Phone Model: </string>

    <string name="server_ip_caption">Server IP address: </string>
    <string name="client_ip_caption">Client IP address: </string>
    <string name="server_time_caption">Server local time: </string>
    <string name="client_time_caption">Client local time: </string>
    <string name="my_name_caption">My name: </string>
    <string name="logged_in_caption">Logged in: </string>


    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>