<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneDetailsActivity">

    <TextView
        android:id="@+id/current_city_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_city_caption"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/phone_model_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <TextView
        android:id="@+id/phone_model_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_model_caption"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <TextView
        android:id="@+id/phone_manufact_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_manufact_caption"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/phone_model_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_city_text"
        app:layout_constraintVertical_bias="0.508" />

</androidx.constraintlayout.widget.ConstraintLayout>